--- a/cart.html
+++ b/cart.html
@@ -39,12 +39,12 @@
         <section class="section-container">
             <h2 class="section-header">My Shopping Cart</h2>
             <table class="cart-table">
-                <tr id="test">
+                <tr id="cart-header">
                     <th>Item</th>
                     <th>Quantity</th>
                     <th>Price</th>
                 </tr>
-                <tr>
+                <tr class="cart-row">
                     <td class="cart-item">
                         <img class="cart-item-image" src="images/men/Hollister_5-Pack_Crew_Multipack_T-Shirts.jpg">
                         <div>
@@ -64,7 +64,7 @@
                         </form>   
                     </td>
                 </tr>
-                <tr>
+                <tr class="cart-row">
                     <td class="cart-item">
                         <img class="cart-item-image" src="images/men/Hollister_Crew_Neck_Multipack_T-Shirts.jpg">
                         <div>
