--- a/cart.html
+++ b/cart.html
@@ -44,6 +44,7 @@
                     <th>Quantity</th>
                     <th>Price</th>
                 </tr>
+                <!--
                 <tr class="cart-row">
                     <td class="cart-item">
                         <img class="cart-item-image" src="images/men/Hollister_5-Pack_Crew_Multipack_T-Shirts.jpg">
@@ -57,7 +58,7 @@
                             <input class="cart-qty-input" type="number" value="1">
                         </form>  
                     </td>
-                    <td>
+                    <td class="align-td">
                         <span class="shop-item-price">$492.00</span>
                         <form class="form" name="cart">
                             <button class="cart-remove-btn" type="button" name="remove" onclick="">REMOVE</button>
@@ -77,13 +78,14 @@
                             <input class="cart-qty-input" type="number" value="1">
                         </form>  
                     </td>
-                    <td>
+                    <td class="align-td">
                         <span class="shop-item-price">$283.90</span>
                         <form class="form" name="cart">
                             <button class="cart-remove-btn" type="button" name="remove" onclick="">REMOVE</button>
                         </form>   
                     </td>
-                </tr>  
+                </tr>
+                -->
                 <tr>
                     <th class="none"></th>
                     <th class="none"></th>
