--- a/comparsion/women.html
+++ b/comparsion/women.html
@@ -22,7 +22,13 @@
                 <ul>
                     <li><a id="logo" href="index.html">Tailor-made Online Shop</a></li>
                     <li><a href="men.html">Men</a></li>
-                    <li><a href="women.html">Women</a></li>           
+                    <li><a href="women.html">Women</a></li>
+                    <li>  
+                        <form class="form" name="search">
+                            <input type="text" id="search-bar" name="bar" placeholder="Search...">
+                            <button type="submit" id="search-btn" name="submit" onclick=""><i class="fas fa-search"></i></button>
+                        </form>
+                    </li>             
                     <li>
                         <a href="cart.html"><i class="fas fa-shopping-cart"></i></a>
                     </li>
@@ -32,11 +38,6 @@
         
         <section class="section-container">
             <h2 class="section-header">Women Fashion</h2>
-            <h4 class="section-subheader">
-                <a href="women.html" class="button">Tops</a>
-                <a href="women_bottom.html" class="button">Bottoms</a>
-                <a href="women_shoes.html" class="button">Shoes</a>
-            </h4>
             <div class="flex-container">
                 <div class="shop-item">
                     <img class="shop-item-image" src="images/women/Levi_s_Denim_Reversible_Bomber.jpg">
@@ -47,7 +48,7 @@
                     <div class="shop-item-details">
                         <span class="shop-item-price">$971.00</span>
                         <form class="form" name="cart">
-                            <button type="button" class="cart-add-btn" name="add">ADD TO CART</button>
+                            <button type="button" class="cart-add-btn" name="add" onclick="">ADD TO CART</button>
                         </form>  
                     </div>
                 </div>
@@ -60,7 +61,7 @@
                     <div class="shop-item-details">
                         <span class="shop-item-price">$664.70</span>
                         <form class="form" name="cart">
-                            <button type="button" class="cart-add-btn" name="add">ADD TO CART</button>
+                            <button type="button" class="cart-add-btn" name="add" onclick="">ADD TO CART</button>
                         </form>  
                     </div>
                 </div>
@@ -73,7 +74,20 @@
                     <div class="shop-item-details">
                         <span class="shop-item-price">$728.90</span>
                         <form class="form" name="cart">
-                            <button type="button" class="cart-add-btn" name="add">ADD TO CART</button>
+                            <button type="button" class="cart-add-btn" name="add" onclick="">ADD TO CART</button>
+                        </form>  
+                    </div>
+                </div>
+                <div class="shop-item">
+                    <img class="shop-item-image" src="images/women/Mango_High-Waist_Straight_Trousers.jpg">
+                    <div class="shop-item-name">
+                        <span class="brand-name">Mango</span>
+                        <div class="product-name">High-Waist Straight Trousers</div>
+                    </div>
+                    <div class="shop-item-details">
+                        <span class="shop-item-price">$555.50</span>
+                        <form class="form" name="cart">
+                            <button type="button" class="cart-add-btn" name="add" onclick="">ADD TO CART</button>
                         </form>  
                     </div>
                 </div>
@@ -86,10 +100,23 @@
                     <div class="shop-item-details">
                         <span class="shop-item-price">$282.90</span>
                         <form class="form" name="cart">
-                            <button type="button" class="cart-add-btn" name="add">ADD TO CART</button>
+                            <button type="button" class="cart-add-btn" name="add" onclick="">ADD TO CART</button>
                         </form>  
                     </div>
-                </div>          
+                </div>
+                <div class="shop-item">
+                    <img class="shop-item-image" src="images/women/TOPSHOP_Moto_Mid_Blue_Embroidered_Side_Stripe_Jamie_Jeans.jpg">
+                    <div class="shop-item-name">
+                        <span class="brand-name">TOPSHOP</span>
+                        <div class="product-name">Moto Mid Blue Embroidered Side Stripe Jamie Jeans</div>
+                    </div>
+                    <div class="shop-item-details">
+                        <span class="shop-item-price">$584.80</span>
+                        <form class="form" name="cart">
+                            <button type="button" class="cart-add-btn" name="add" onclick="">ADD TO CART</button>
+                        </form>  
+                    </div>
+                </div>            
                 <div class="shop-item">
                     <img class="shop-item-image" src="images/women/Vero_Moda_Yiki_34_Sleeve_Blazer.jpg">
                     <div class="shop-item-name">
@@ -99,50 +126,23 @@
                     <div class="shop-item-details">
                         <span class="shop-item-price">$346.20</span>
                         <form class="form" name="cart">
-                            <button type="button" class="cart-add-btn" name="add">ADD TO CART</button>
+                            <button type="button" class="cart-add-btn" name="add" onclick="">ADD TO CART</button>
                         </form>  
                     </div>
-                </div> 
+                </div>
                 <div class="shop-item">
-                    <img class="shop-item-image" src="images/women/Hollister Lace Off-The-Shoulder Top.jp2">
+                    <img class="shop-item-image" src="images/women/Ripe_Maternity_Maternity_Knife_Pleat_Dress.jpg">
                     <div class="shop-item-name">
-                        <span class="brand-name">Hollister</span>
-                        <div class="product-name">Lace Off-The-Shoulder Top</div>
+                        <span class="brand-name">Ripe Maternity</span>
+                        <div class="product-name">Maternity Knife Pleat Dress</div>
                     </div>
                     <div class="shop-item-details">
-                        <span class="shop-item-price">$370</span>
+                        <span class="shop-item-price">$629.00</span>
                         <form class="form" name="cart">
-                            <button type="button" class="cart-add-btn" name="add">ADD TO CART</button>
+                            <button type="button" class="cart-add-btn" name="add" onclick="">ADD TO CART</button>
                         </form>  
                     </div>
-                </div>  
-                <div class="shop-item">
-                    <img class="shop-item-image" src="images/women/Hollister Easy Crewneck T-Shirt.jp2">
-                    <div class="shop-item-name">
-                        <span class="brand-name">Hollister</span>
-                        <div class="product-name">Easy Crewneck T-Shirt</div>
-                    </div>
-                    <div class="shop-item-details">
-                        <span class="shop-item-price">$210</span>
-                        <form class="form" name="cart">
-                            <button type="button" class="cart-add-btn" name="add">ADD TO CART</button>
-                        </form>  
-                    </div>
-                </div> 
-                
-                <div class="shop-item">
-                    <img class="shop-item-image" src="images/women/Hollister Banded Hem T-Shirt.jp2">
-                    <div class="shop-item-name">
-                        <span class="brand-name">Hollister</span>
-                        <div class="product-name">Banded Hem T-Shirt</div>
-                    </div>
-                    <div class="shop-item-details">
-                        <span class="shop-item-price">$210</span>
-                        <form class="form" name="cart">
-                            <button type="button" class="cart-add-btn" name="add">ADD TO CART</button>
-                        </form>  
-                    </div>
-                </div>   
+                </div>        
             </div>
         </section>
 
@@ -161,7 +161,8 @@
             </nav>
         </footer>
 
-        <script>
+        <script src="js/jquery-3.3.0.js"></script>
+        <script src="js/Cart.js">
             /*  determine whether the back to top button will be shown according to how many px are away from the top
                 use scrollTop property to get the number of px that the document object has been scrolled down
                 if the distance is more than 24 px, the button will be displayed
